fix(SCRUM-229) : 페이지네이션 문제 해결